# mobility-cpp

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  environment.yml  requirements.txt  spack.yaml
benchmarks/: CMakeLists.txt  row_expansion.cpp  (+1 more)
locales/: CMakeLists.txt  locale_main.cpp
src/: CMakeLists.txt  LocationJoinWriter.cpp  LocationJoinWriter.hpp  WeekSplitter.cpp  WeekSplitter.hpp  connectivity.cpp  distance.cpp  joiner.cpp  main  main.cpp  parquet.cpp  parquet.hpp  splitter.cpp  utils.hpp
src/centrality/: CMakeLists.txt  SafegraphCBGMapper.cpp  SafegraphCBGMapper.hpp  SafegraphCBGTiler.cpp  SafegraphCBGTiler.hpp  SafegraphMapper.cpp  SafegraphMapper.hpp  SafegraphTiler.cpp  SafegraphTiler.hpp  centrality.cpp  config.cpp
src/components/: CMakeLists.txt  JoinedLocation.cpp  LocationJoiner.cpp  LocationJoiner.hpp  ShapefileWrapper.cpp  TemporalGraphs.cpp  TemporalMatricies.cpp  TemporalMatricies.hpp  TileClient.cpp  TileDimension.cpp  TileDimension.hpp  TileWriter.cpp  TileWriter.hpp  WeekSplitter.cpp  WeekSplitter.hpp
src/components/include/components/: BaseSafegraphMapper.hpp  CBGOffsetCalculator.hpp  CBGShapefileWrapper.hpp  CountyShapefileWrapper.hpp  JoinedLocation.hpp  LocationJoiner.hpp  OffsetCalculator.hpp  RowProcessor.hpp  ShapefileWrapper.hpp  TemporalGraphs.hpp  TemporalMatricies.hpp  TileClient.hpp  TileWriter.hpp  TileWriter2.hpp  VisitMatrixWriter.hpp  VisitMatrixWriter2.hpp  WeekSplitter.hpp  constants.hpp  data.hpp  serializers.cpp  serializers.hpp
src/components/include/components/detail/: CBGOffsetCalculator.hpp  CountyOffsetCalculator.hpp  helpers.hpp  offset_shared.hpp
src/components/include/components/server/: CBGShapefileServer.hpp  CountyShapefileServer.hpp  ShapefileServer.hpp
src/components/server/: JoinedLocationServer.cpp  JoinedLocationServer.hpp  LocationJoinerServer.cpp  LocationJoinerServer.hpp  ShapefileServer.cpp  ShapefileServer.hpp  TileServer.cpp  TileServer.hpp  WeekSplitterServer.cpp  WeekSplitterServer.hpp
src/components/src/: BaseSafegraphMapper.cpp  CBGOffsetCalculator.cpp  CBGShapefileWrapper.cpp  CountyShapefileWrapper.cpp  HDF5Writer.cpp  HDF5Writer.hpp  OffsetCalculator.cpp  OffsetCalculator.hpp  RowProcessor.cpp  RowProcessor.hpp  ShapefileWrapper.cpp  TemporalMatricies.cpp  TemporalMatricies.hpp  TileClient.cpp  TileConfiguration.hpp  TileWriter.cpp  TileWriter.hpp  TileWriter2.cpp  VisitMatrixWriter.cpp  VisitMatrixWriter.hpp  VisitMatrixWriter2.cpp  WeekSplitter.cpp  types.hpp  vector_scaler.hpp
src/components/src/detail/: CBGOffsetCalculator.cpp  CountyOffsetCalculator.cpp  helpers.cpp
src/components/src/server/: CBGShapefileServer.cpp  CountyShapefileServer.cpp  JoinedLocationServer.cpp  JoinedLocationServer.hpp  ShapefileServer.cpp  ShapefileServer.hpp  TileServer.cpp  TileServer.hpp  WeekSplitterServer.cpp  WeekSplitterServer.hpp
src/components/test/: test_scaler.cpp
src/dwell-time/: CMakeLists.txt  DwellConfig.hpp  DwellTimes.hpp  SafegraphDwellMapper.cpp  SafegraphDwellMapper.hpp  SafegraphDwellTiler.cpp  SafegraphDwellTiler.hpp  dwell-time.cpp
src/epi-rank/: BlazeMatricies.cpp  BlazeMatricies.hpp  CMakeLists.txt  EigenMatricies.cpp  EigenMatricies.hpp  EpiConfig.cpp  SafegraphCountyMapper.cpp  SafegraphCountyMapper.hpp  SafegraphCountyTiler.cpp  SafegraphCountyTiler.hpp  epi-rank.cpp
src/graph/: CMakeLists.txt
src/graph/include/graph/: BoostGraph.hpp  graph.hpp
src/graph/include/graph/impl/: DistanceRecorder.hpp  hasher.hpp
src/graph/src/: BoostGraph.cpp
src/graph/test/: distance-test.cpp
src/io/: CMakeLists.txt  parquet.cpp  parquet.hpp
src/io/benchmarks/: row_expansion.cpp
src/io/include/io/: ParallelHDF5.hpp  Shapefile.hpp  csv.hpp  csv_reader.hpp  hdf5.hpp  helpers.hpp  parquet.hpp  shapefile.hpp  simple_hdf5.hpp  sizer.hpp
src/io/src/: ParallelHDF5.cpp  ParallelHDF5.hpp  ParallelHDF5Table.cpp  ParallelHDF5Table.hpp  Shapefile.cpp  hdf5.cpp  parquet.cpp  shapefile.cpp
src/io/test/: csv_test.cpp  hdf_mpi_test.cpp  hdf_test.cpp  shapefile_test.cpp
src/io/test/data/: addresses_header.csv
src/main.dSYM/Contents/Resources/DWARF/: main
src/map-tile/: CMakeLists.txt
src/map-tile/include/: traits.hpp
src/map-tile/include/map-tile/: Context.hpp  MapServerClient.hpp  MapTile.hpp  MapTileBuilder.hpp  MapTileClient.hpp  MapTileServer.hpp
src/map-tile/include/map-tile/client/: MapTileClient.hpp
src/map-tile/include/map-tile/coordinates/: Coordinate2D.hpp  Coordinate3D.hpp  LocaleLocator.hpp  LocaleTiler.hpp
src/map-tile/include/map-tile/ctx/: Context.hpp
src/map-tile/include/map-tile/io/: EmitHandler.hpp  EmitHelpers.hpp  FileProvider.hpp
src/map-tile/src/: FileProvider.cpp
src/map-tile/src/coordinates/: Coordinate2D.cpp  Coordinate3D.cpp  LocaleLocator.cpp  LocaleTiler.cpp
src/map-tile/src/io/: EmitHelpers.cpp
src/map-tile/src/server/: ComponentIDCache.cpp  MapTileServer.cpp
src/map-tile/test/: locator_tests.cpp  runtime_tests.cpp  serialization_tests.cpp  simple_test.cpp  tiler_tests.cpp
src/map-tile/test/data/: airports.csv  routes.csv
src/python/: CMakeLists.txt
src/python/include/python/: PandasEngine.hpp  PythonInterpreter.hpp  PythonTiler.hpp  helpers.hpp
src/python/src/: PythonInterpreter.cpp
src/python/test/: interpreter_test.cpp  pandas_test.cpp  person.hpp  person_diff.hpp  tiler_test.cpp
src/python/test/data/: missing_compute.py  return_test.py  simple_test.py
src/shared/: CMakeLists.txt
src/shared/include/shared/: ConversionUtils.hpp  DateUtils.hpp  DirectoryUtils.hpp  HostnameLogger.hpp  QuotedLineSplitter.hpp  TileConfiguration.hpp  constants.hpp  data.hpp  debug.hpp  serializers.hpp
src/shared/src/: ConversionUtils.cpp  DateUtils.cpp  DirectoryUtils.cpp  HostnameLogger.cpp  serializers.cpp
src/shared/test/: serialization_tests.cpp
src/spatial/: CMakeLists.txt
src/spatial/include/spatial/: GEOSProcessor.hpp  MetalProcessor.hpp  SpatialProcessor.hpp
src/spatial/src/: Algorithms.cpp  GEOSProcessor.cpp  MetalProcessor.mm  haversine.metal
src/spatial/test/: simple-tests.cpp
(+43 files in other folders)
