add_executable(centrality centrality.cpp SafegraphMapper.cpp SafegraphMapper.hpp SafegraphTiler.cpp SafegraphTiler.hpp)
target_link_libraries(centrality PRIVATE map-tile shared Boost::filesystem Boost::regex Boost::program_options spdlog::spdlog yaml-cpp::yaml-cpp components)
target_compile_options(centrality PRIVATE "$<$<CONFIG:DEBUG>:${DEBUG_FLAGS}>")
target_compile_options(centrality PRIVATE "$<$<CONFIG:RELEASE>:${RELEASE_FLAGS}>")
add_sanitizers(centrality)

if (${DEFAULT_MALLOC} STREQUAL "tcmalloc")
    message("Linking with TCMalloc")
    target_link_libraries(centrality PRIVATE ${TCMALLOC_LIBRARY})
endif ()